# mcp-recruiter

./: .gitignore  README.md  pyproject.toml
examples/: job_description.yaml  job_description_demo.yaml  test_scenario.yaml  获取网页当天最新数据mcp服务.yaml
src/mcp_recruiter/: __init__.py  main.py
src/mcp_recruiter/cli/: interactive.py  jd_llm_generator.py  pipeline.py
src/mcp_recruiter/core/: config.py  enums.py  llm_client.py  models.py  state.py  store.py
src/mcp_recruiter/extensions/: base.py  mcp_tool.py  registry.py
src/mcp_recruiter/registry/: aggregator.py  awesome_list_source.py  base.py  cache.py  github_source.py  mcp_hub_source.py  npm_source.py  pypi_source.py  query_expander.py  web_search_source.py
src/mcp_recruiter/reporting/: html_render.py  terminal_render.py
src/mcp_recruiter/reporting/templates/: report.html.j2
src/mcp_recruiter/sandbox/: capture.py  manager.py  scenario_loader.py  test_runner.py
src/mcp_recruiter/scoring/: engine.py  factors.py  normalizers.py  weights.py
src/mcp_recruiter/screening/: hard_filter.py  resume_builder.py  soft_scorer.py
