[project]
name = "mcp-recruiter"
version = "0.1.0"
description = "Technical solution evaluation system using a hiring metaphor - MCP tool recruitment"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MCP Recruiter Team"}
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "plotext>=5.0",
    "limiter>=0.2",
]

[project.optional-dependencies]
sandbox = ["docker>=7.0"]
store = ["sqlite-utils>=3.0"]
all = ["docker>=7.0", "sqlite-utils>=3.0"]

[project.scripts]
mcp-recruiter = "mcp_recruiter.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
